--- a/report/Framework.tex
+++ b/report/Framework.tex
@@ -48,13 +48,13 @@ Concerning the terminology we use, to have a rough idea of the meaning of the Ac
 \begin{tabular}{p{6cm} l} %p{7cm}
 						\toprule
 						\addlinespace[0.2cm]
-\textbf{Acceleo terminology} 	& \textbf{Java (coarse) equivalent} 	\\ 
+\textbf{Acceleo terminology} 	& \textbf{Java idea} 	\\ 
 						\cmidrule(l){1-2}
-Module 				& File				 	\\[0,1cm]		
+Module 				& File/Class				 	\\[0,1cm]		
 Main Module			& Class with Main method		\\[0,1cm]
 Template			& Method			  	\\[0,1cm]
 Import(Module)			& Import(Class)			    	\\[0,1cm]
-Access Control (e.g Public)	& Same 					\\[0,1cm]
+Access Control (e.g Public)	& Equivalent 					\\[0,1cm]
 Folder File Structure		& Package				\\[0,1cm]
 
 						\addlinespace[0.2cm]
