--- a/report/references.bib
+++ b/report/references.bib
@@ -1,4 +1,12 @@
 % References
+@book{	Havey2005,
+ author = {Havey, Michael},
+ title = {Essential Business Process Modeling},
+ year = {2005},
+ isbn = {0596008430},
+ publisher = {O'Reilly Media, Inc.},
+} 
+
 @Misc{ acceleoDoc,
 	title = "Acceleo Documentation",
 	author = "Acceleo Team",
